--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,11 @@ body {
 }
 
 a {
-  color: #2dc997;
+  color: rgba(3, 99, 16, 0.9);
 }
 
 a:hover, a:active, a:focus {
-  color: #2dca98;
+  color: rgba(3, 99, 16, 0.9);
   outline: none;
   text-decoration: none;
 }
@@ -74,7 +74,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .back-to-top:hover {
-  background: #2dc997;
+  background: rgba(3, 99, 16, 0.9);
   color: #fff;
 }
 
@@ -126,7 +126,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header.header-fixed {
-  background: rgba(52, 59, 64, 0.9);
+  background: rgba(2, 61, 10, 0.9);
   padding: 20px 0;
   height: 72px;
   transition: all 0.5s;
@@ -138,7 +138,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url(../img/hero-bg.jpg) top center;
+  background: url(../img/home.jpg) top center;
   background-size: cover;
   position: relative;
 }
@@ -151,7 +151,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero:before {
   content: "";
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 0.3);
   position: absolute;
   bottom: 0;
   top: 0;
@@ -218,8 +218,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero .btn-get-started:hover {
-  background: #2dc997;
-  border: 2px solid #2dc997;
+  background: #0366fc;
+  border: 2px solid #0366fc;
 }
 
 /*--------------------------------------------------------------
@@ -317,7 +317,7 @@ h1, h2, h3, h4, h5, h6 {
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: #2dc997;
+  background-color: #0366fc;
   visibility: hidden;
   -webkit-transform: scaleX(0);
   transform: scaleX(0);
@@ -354,7 +354,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-menu ul li a:hover {
-  background: #2dc997;
+  background: #0366fc;
   color: #fff;
 }
 
@@ -395,7 +395,7 @@ h1, h2, h3, h4, h5, h6 {
   padding-top: 18px;
   bottom: 0;
   z-index: 998;
-  background: rgba(52, 59, 64, 0.9);
+  background: rgba(3, 99, 16, 0.9);
   left: -260px;
   width: 260px;
   overflow-y: auto;
@@ -442,11 +442,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #mobile-nav ul .menu-has-children i.fa-chevron-up {
-  color: #2dc997;
+  color: #0366fc;
 }
 
 #mobile-nav ul .menu-item-active {
-  color: #2dc997;
+  color: #0366fc;
 }
 
 #mobile-body-overly {
@@ -456,7 +456,7 @@ h1, h2, h3, h4, h5, h6 {
   top: 0;
   left: 0;
   position: fixed;
-  background: rgba(52, 59, 64, 0.9);
+  background: rgba(3, 99, 16, 0.9);
   display: none;
 }
 
@@ -501,8 +501,8 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #about .about-container .background {
-  min-height: 300px;
-  background: url(../img/about-img.jpg) center top no-repeat;
+  min-height: 400px;
+  background: url(../img/generica.jpg) center no-repeat;
   margin-bottom: 10px;
 }
 
@@ -547,11 +547,11 @@ body.mobile-nav-active #mobile-nav-toggle {
   flex-direction: column;
   text-align: center;
   border-radius: 50%;
-  border: 2px solid #2dc997;
+  border: 2px solid rgba(3, 99, 16, 0.9);
 }
 
 #about .about-container .icon-box .icon i {
-  color: #2dc997;
+  color: rgba(3, 99, 16, 0.9);
   font-size: 24px;
 }
 
@@ -576,14 +576,14 @@ body.mobile-nav-active #mobile-nav-toggle {
 /* Facts Section
 --------------------------------*/
 #facts {
-  background: #f7f7f7;
+  background: rgba(0, 0, 0, 0.1);
   padding: 80px 0 60px 0;
 }
 
 #facts .counters span {
   font-size: 48px;
   display: block;
-  color: #2dc997;
+  color: rgba(3, 99, 16, 0.9);
 }
 
 #facts .counters p {
@@ -625,7 +625,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   text-align: center;
   width: 72px;
   height: 72px;
-  background: #2dc997;
+  background: rgba(3, 99, 16, 0.9);
 }
 
 #services .icon a {
@@ -639,15 +639,15 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #services .box:hover .icon {
   background: #fff;
-  border: 2px solid #2dc997;
+  border: 2px solid rgba(3, 99, 16, 0.9);
 }
 
 #services .box:hover .icon i {
-  color: #2dc997;
+  color: rgba(3, 99, 16, 0.9);
 }
 
 #services .box:hover .icon a {
-  color: #2dc997;
+  color: rgba(3, 99, 16, 0.9);
 }
 
 #services .title {
@@ -669,7 +669,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 /* Call To Action Section
 --------------------------------*/
 #call-to-action {
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/call-to-action-bg.jpg) fixed center center;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/services/padel.jpg) fixed center center;
   background-size: cover;
   padding: 80px 0;
 }
@@ -708,14 +708,14 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #call-to-action .cta-btn:hover {
-  background: #2dc997;
-  border: 2px solid #2dc997;
+  background: rgba(3, 99, 16, 0.9);
+  border: 2px solid rgba(3, 99, 16, 0.9);
 }
 
 /* Portfolio Section
 --------------------------------*/
 #portfolio {
-  background: #f7f7f7;
+  background: #fff;
   padding: 80px 0;
 }
 
@@ -746,7 +746,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #portfolio #portfolio-flters li:hover, #portfolio #portfolio-flters li.filter-active {
-  background: #2dc997;
+  background: rgba(3, 99, 16, 0.9);
   color: #fff;
 }
 
@@ -772,7 +772,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #portfolio .portfolio-item .details {
   height: 50px;
-  background: #2dc997;
+  background: rgba(3, 99, 16, 0.9);
   position: absolute;
   width: 100%;
   height: 50px;
@@ -806,7 +806,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 /* Team Section
 --------------------------------*/
 #team {
-  background: #fff;
+  background: rgba(0, 0, 0, 0.1);
   padding: 80px 0 60px 0;
 }
 
@@ -818,7 +818,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #team .member .pic {
   margin-bottom: 15px;
   overflow: hidden;
-  height: 260px;
+  height: 200px;
 }
 
 #team .member .pic img {
@@ -842,11 +842,11 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #team .member .social a {
-  color: #b3b3b3;
+  color: rgba(3, 99, 16, 0.9);
 }
 
 #team .member .social a:hover {
-  color: #2dc997;
+  color: #b3b3b3;
 }
 
 #team .member .social i {
@@ -857,7 +857,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 /* Contact Section
 --------------------------------*/
 #contact {
-  background: #f7f7f7;
+  background: #fff;
   padding: 80px 0 40px 0;
 }
 
@@ -872,7 +872,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #contact .info i {
   font-size: 32px;
-  color: #2dc997;
+  color: rgba(3, 99, 16, 0.9);
   float: left;
 }
 
@@ -906,13 +906,13 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #contact .social-links a:hover {
-  background: #2dc997;
+  background: rgba(3, 99, 16, 0.9);
   color: #fff;
 }
 
 #contact .form #sendmessage {
-  color: #2dc997;
-  border: 1px solid #2dc997;
+  color: rgba(3, 99, 16, 0.9);
+  border: 1px solid rgba(3, 99, 16, 0.9);
   display: none;
   text-align: center;
   padding: 15px;
@@ -949,7 +949,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #contact .form button[type="submit"] {
-  background: #2dc997;
+  background: rgba(3, 99, 16, 0.9);
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -957,14 +957,14 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #contact .form button[type="submit"]:hover {
-  background: #51d8ad;
+  background: rgba(3, 99, 16, 0.9);
 }
 
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: #343b40;
+  background: rgba(2, 61, 10, 0.9);
   padding: 30px 0;
   color: #fff;
   font-size: 14px;
