--- a/css/style.css
+++ b/css/style.css
@@ -669,7 +669,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 /* Call To Action Section
 --------------------------------*/
 #call-to-action {
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/services/padel.jpg) fixed center center;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/backgroud/back1.jpeg) fixed center center;
   background-size: cover;
   padding: 80px 0;
 }
@@ -768,6 +768,8 @@ body.mobile-nav-active #mobile-nav-toggle {
   position: relative;
   top: 0;
   transition: all 600ms cubic-bezier(0.645, 0.045, 0.355, 1);
+  /* max-width: 100%; */
+  max-height: 100%;
 }
 
 #portfolio .portfolio-item .details {
