--- a/css/style.css
+++ b/css/style.css
@@ -500,12 +500,16 @@ body.mobile-nav-active #mobile-nav-toggle {
   padding: 80px 0;
 }
 
-#about .about-container .background {
+/* #about .about-container .background {
   min-height: 400px;
-  background: url(../img/generica.jpg) center no-repeat;
+  background: url(../img/work/trabajo1.jpg) center no-repeat;
   margin-bottom: 10px;
+} */
+#about .about-container .background {
+  background: url(../img/work/trabajo1.jpg) center no-repeat;
+  background-size: 100%;
+  padding: 80px 0px;
 }
-
 #about .about-container .content {
   background: #fff;
 }
@@ -575,11 +579,15 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 /* Facts Section
 --------------------------------*/
-#facts {
+/* #facts {
   background: rgba(0, 0, 0, 0.1);
   padding: 80px 0 60px 0;
+} */
+#facts {
+  background: linear-gradient(rgba(0, 0, 0, 0.01), rgba(0, 0, 0, 0.01)),url(../img/backgroud/back1.jpeg) center no-repeat;
+  background-size: 100%;
+  padding: 80px 0 60px 0;
 }
-
 #facts .counters span {
   font-size: 48px;
   display: block;
@@ -666,10 +674,82 @@ body.mobile-nav-active #mobile-nav-toggle {
   line-height: 24px;
 }
 
+/* Resources Section
+--------------------------------*/
+#resources {
+  background: #fff;
+  background-size: cover;
+  padding: 80px 0 60px 0;
+}
+
+#resources .box {
+  padding: 50px 20px;
+  margin-bottom: 50px;
+  text-align: center;
+  border: 1px solid #e6e6e6;
+  height: 200px;
+  position: relative;
+  background: #fafafa;
+}
+
+#resources .icon {
+  position: absolute;
+  top: -36px;
+  left: calc(50% - 36px);
+  transition: 0.2s;
+  border-radius: 50%;
+  border: 6px solid #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  width: 72px;
+  height: 72px;
+  background: rgba(3, 99, 16, 0.9);
+}
+
+#resources .icon a {
+  display: inline-block;
+}
+
+#resources .icon i {
+  color: #fff;
+  font-size: 24px;
+}
+
+#resources .box:hover .icon {
+  background: #0366fc;
+  border: 2px solid #fff;
+}
+
+#resources .box:hover .icon i {
+  color: #fff;
+}
+
+#resources .box:hover .icon a {
+  color: #fff;
+}
+
+#resources .title {
+  font-weight: 700;
+  font-size: 18px;
+  margin-bottom: 15px;
+  text-transform: uppercase;
+}
+
+#resources .title a {
+  color: #111;
+}
+
+#resources .description {
+  font-size: 14px;
+  line-height: 24px;
+}
 /* Call To Action Section
 --------------------------------*/
 #call-to-action {
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/backgroud/back1.jpeg) fixed center center;
+  background:  url(../img/work/trabajo1.jpg) fixed top center;
   background-size: cover;
   padding: 80px 0;
 }
@@ -768,8 +848,10 @@ body.mobile-nav-active #mobile-nav-toggle {
   position: relative;
   top: 0;
   transition: all 600ms cubic-bezier(0.645, 0.045, 0.355, 1);
-  /* max-width: 100%; */
+  min-width: 200px;
   max-height: 100%;
+  /* max-width: 100%; */
+  
 }
 
 #portfolio .portfolio-item .details {
