--- a/css/style.css
+++ b/css/style.css
@@ -749,7 +749,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 /* Call To Action Section
 --------------------------------*/
 #call-to-action {
-  background:  url(../img/work/trabajo1.jpg) fixed top center;
+  background:  url(../img/services/padel.jpg) fixed top center;
   background-size: cover;
   padding: 80px 0;
 }
