--- a/css/style.css
+++ b/css/style.css
@@ -848,10 +848,9 @@ body.mobile-nav-active #mobile-nav-toggle {
   position: relative;
   top: 0;
   transition: all 600ms cubic-bezier(0.645, 0.045, 0.355, 1);
-  min-width: 200px;
-  max-height: 100%;
-  /* max-width: 100%; */
-  
+  min-height: 200px; 
+  width: 100%;
+  object-fit: cover;
 }
 
 #portfolio .portfolio-item .details {
