--- a/css/style.css
+++ b/css/style.css
@@ -442,7 +442,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #mobile-nav ul li a:hover {
-  color: var(--white);
+  color: var(--main-green);
 }
 
 #mobile-nav ul li li {
@@ -459,11 +459,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #mobile-nav ul .menu-has-children i.fa-chevron-up {
-  color: var(--main-blue);
+  color: var(--main-green);
 }
 
 #mobile-nav ul .menu-item-active {
-  color: var(--main-blue);
+  color: var(--main-green);
 }
 
 #mobile-body-overly {
@@ -473,7 +473,7 @@ h1, h2, h3, h4, h5, h6 {
   top: 0;
   left: 0;
   position: fixed;
-  background: var(--white);
+  background: rgba(250, 250, 250, 0.3);
   display: none;
 }
 
@@ -698,7 +698,12 @@ body.mobile-nav-active #mobile-nav-toggle {
 /* Resources Section
 --------------------------------*/
 #resources {
-  background:  linear-gradient(rgba(0, 0, 0, 0.01), rgba(0, 0, 0, 0.01)),url(../img/backgroud/back3.jpeg) fixed top center;
+  background:  linear-gradient(rgba(0, 0, 0, 0.01), rgba(0, 0, 0, 0.01)),url(../img/backgroud/back3.jpeg) fixed center no-repeat;
+  background-size: cover;
+  padding: 80px 0 60px 0;
+}
+#mobile #resources {
+  background:  linear-gradient(rgba(0, 0, 0, 0.01), rgba(0, 0, 0, 0.01)),url(../img/backgroud/back3.jpeg)  center no-repeat;
   background-size: cover;
   padding: 80px 0 60px 0;
 }
@@ -708,7 +713,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   margin-bottom: 50px;
   text-align: center;
   border: 1px solid #e6e6e6;
-  height: 200px;
+  height: 150px;
   position: relative;
   background: #fafafa;
 }
@@ -778,6 +783,11 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------*/
 #call-to-action {
   background:  url(../img/backgroud/back1.jpeg) fixed bottom center;
+  background-size: cover;
+  padding: 80px 0;
+}
+#mobile #call-to-action {
+  background:  url(../img/backgroud/back1.jpeg) bottom center;
   background-size: cover;
   padding: 80px 0;
 }
