--- a/css/style.css
+++ b/css/style.css
@@ -701,11 +701,13 @@ body.mobile-nav-active #mobile-nav-toggle {
   background:  linear-gradient(rgba(0, 0, 0, 0.01), rgba(0, 0, 0, 0.01)),url(../img/backgroud/back3.jpeg) fixed center no-repeat;
   background-size: cover;
   padding: 80px 0 60px 0;
+  width: 100%;
+  position: relative;
 }
-#mobile #resources {
-  background:  linear-gradient(rgba(0, 0, 0, 0.01), rgba(0, 0, 0, 0.01)),url(../img/backgroud/back3.jpeg)  center no-repeat;
-  background-size: cover;
-  padding: 80px 0 60px 0;
+@media (min-width: 512px) {
+  #resources {
+    background-attachment: fixed;
+  }
 }
 
 #resources .box {
@@ -785,11 +787,13 @@ body.mobile-nav-active #mobile-nav-toggle {
   background:  url(../img/backgroud/back1.jpeg) fixed bottom center;
   background-size: cover;
   padding: 80px 0;
+  width: 100%;
+  position: relative;
 }
-#mobile #call-to-action {
-  background:  url(../img/backgroud/back1.jpeg) bottom center;
-  background-size: cover;
-  padding: 80px 0;
+@media (min-width: 512px) {
+  #call-to-action {
+    background-attachment: fixed;
+  }
 }
 
 #call-to-action .cta-title {
